--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,9 +48,30 @@ layout: default
       <div class="article-share">
         <h2 class="article-share__title">Share</h2>
         <ul>
-          <li><a href="https://twitter.com/intent/tweet?text={{ page.title | url_encode }}&url={{ site.url }}{{ page.url | relative_url }}" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-          <li><a href="https://www.linkedin.com/sharing/share-offsite/?url={{ site.url }}{{ page.url | relative_url }}" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-          <li><a href="https://mastodon.social/share?text={{ page.title | url_encode }}%20{{ site.url }}{{ page.url | relative_url }}" target="_blank" rel="noopener noreferrer">Mastodon</a></li>
+          <li>
+            <a href="https://twitter.com/intent/tweet?text={{ page.title | url_encode }}&url={{ site.url }}{{ page.url | relative_url }}" target="_blank" rel="noopener noreferrer" class="article-share__button article-share__button--twitter" aria-label="Share on Twitter">
+              <span aria-hidden="true">🐦</span>
+              <span>Twitter</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ site.url }}{{ page.url | relative_url }}" target="_blank" rel="noopener noreferrer" class="article-share__button article-share__button--linkedin" aria-label="Share on LinkedIn">
+              <span aria-hidden="true">💼</span>
+              <span>LinkedIn</span>
+            </a>
+          </li>
+          <li>
+            <button type="button" class="article-share__button article-share__button--copy" data-share-url="{{ site.url }}{{ page.url | relative_url }}" aria-label="Copy link to clipboard">
+              <span aria-hidden="true">🔗</span>
+              <span>Copy link</span>
+            </button>
+          </li>
+          <li>
+            <button type="button" class="article-share__button article-share__button--native" data-share-title="{{ page.title }}" data-share-url="{{ site.url }}{{ page.url | relative_url }}" aria-label="Share using native share" style="display: none;">
+              <span aria-hidden="true">📤</span>
+              <span>Share</span>
+            </button>
+          </li>
         </ul>
       </div>
     </aside>
