--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,21 +2,49 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 
-<!-- Optimised font loading with font-display -->
+<!-- Resource hints for performance -->
+<link rel="dns-prefetch" href="https://fonts.googleapis.com">
+<link rel="dns-prefetch" href="https://fonts.gstatic.com">
+<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+
+<!-- Preconnect to external domains -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+
+<!-- Optimised font loading with font-display -->
 <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"></noscript>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-MX1mqnklI1+w4n1vCtbmZh9rqx8pFazc2DSES0QPTsQ6NWGXfOtCaydC6Sm+CVijKpQYHf6PW0knYl4h3iiRig==" crossorigin="anonymous" referrerpolicy="no-referrer">
+
+<!-- Critical CSS loaded immediately -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+
+<!-- Non-critical external resources -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-MX1mqnklI1+w4n1vCtbmZh9rqx8pFazc2DSES0QPTsQ6NWGXfOtCaydC6Sm+CVijKpQYHf6PW0knYl4h3iiRig==" crossorigin="anonymous" referrerpolicy="no-referrer" media="print" onload="this.media='all'">
+<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-MX1mqnklI1+w4n1vCtbmZh9rqx8pFazc2DSES0QPTsQ6NWGXfOtCaydC6Sm+CVijKpQYHf6PW0knYl4h3iiRig==" crossorigin="anonymous" referrerpolicy="no-referrer"></noscript>
+
 <link rel="icon" type="image/png" href="{{ site.logo | default: '/assets/images/favicon.png' | relative_url }}">
 
 {% include monospace-font.html %}
 
-<!-- Syntax highlighting -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/atom-one-dark.min.css" integrity="sha512-drOTzjRvWmvMRGsiE9zraFMvx6bMpiKFFitvolG/GpNZgbf+168Q5e0siJmq9hw3rroWAt4EvsC0BpvyEukgqA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js" integrity="sha512-bvJy5o+1OtSWT8gJtIhXCTITVEWilQoNqT9XyM54q9WlH0I1GtIsfRSAxEPPYUajFBl/MEGLjm+rXhN3kLBZjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>hljs.highlightAll();</script>
+<!-- Syntax highlighting - deferred for performance -->
+<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/atom-one-dark.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/atom-one-dark.min.css" integrity="sha512-drOTzjRvWmvMRGsiE9zraFMvx6bMpiKFFitvolG/GpNZgbf+168Q5e0siJmq9hw3rroWAt4EvsC0BpvyEukgqA==" crossorigin="anonymous" referrerpolicy="no-referrer"></noscript>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js" integrity="sha512-bvJy5o+1OtSWT8gJtIhXCTITVEWilQoNqT9XyM54q9WlH0I1GtIsfRSAxEPPYUajFBl/MEGLjm+rXhN3kLBZjw==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+<script>
+  // Defer syntax highlighting until after initial render
+  if (document.readyState === 'loading') {
+    document.addEventListener('DOMContentLoaded', function() {
+      if (typeof hljs !== 'undefined') {
+        hljs.highlightAll();
+      }
+    });
+  } else {
+    if (typeof hljs !== 'undefined') {
+      hljs.highlightAll();
+    }
+  }
+</script>
 
 <!-- Open Graph Meta Tags -->
 <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
