--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,10 @@
     </a>
 
     <div class="global-header__controls">
+      <button class="search-trigger btn btn--icon" type="button" data-search-trigger aria-label="Open search">
+        <span aria-hidden="true">🔍</span>
+        <span class="sr-only">Search</span>
+      </button>
       <button class="theme-switch" type="button" data-theme-toggle aria-label="Toggle colour theme">
         <span class="theme-switch__icon" aria-hidden="true"></span>
         <span class="theme-switch__label">Theme</span>
