--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,14 @@
 <html lang="{{ page.lang | default: site.lang | default: 'en' }}" data-site>
   <head>
     {% include head.html %}
+    {% include search-index.html %}
   </head>
   {% assign body_classes = page.classes %}
   <body class="layout-{{ page.layout | default: 'default' }}{% if body_classes %} {{ body_classes }}{% endif %}">
     <a class="skip-link" href="#site-main">Skip to main content</a>
 
     {% include header.html %}
+    {% include components/search.html %}
 
     <main id="site-main" class="site-main" role="main">
       {{ content }}
